infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: codex.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/spells/?(.*)
            pathType: Prefix
            backend:
              service:
                name: spells-srv
                port:
                  number: 3000
          - path: /api/favourites/?(.*)
            pathType: Prefix
            backend:
              service:
                name: spells-srv
                port:
                  number: 3000
          - path: /api/images/?(.*)
            pathType: Prefix
            backend:
              service:
                name: spells-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
